Fixed display on iPhones

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -16,7 +16,10 @@
 
 html {
   width: 100%;
-  height: 100%;
+	height: 100%;
+	
+	-webkit-overflow-scrolling: touch;
+	-webkit-text-size-adjust: none;
   
   font-size: 50%; // 8px 
 
@@ -83,9 +86,11 @@ body {
 
 a {
 	text-decoration: none;
+	-webkit-tap-highlight-color: transparent;
 
 	&:hover {
 		text-decoration: none;
+		-webkit-tap-highlight-color: transparent;
 	}
 }
 
@@ -121,6 +126,10 @@ ul {
 img {
   width: 100%;
   height: auto;
+}
+
+.input {
+	-webkit-appearance: none;
 }
 
 .desc {
